After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754035 - Two strings that should not be marked for translation
Two strings that should not be marked for translation
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Internationalization (i18n)
3.17.x
Other Linux
: Normal critical
: 3.18
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-08-24 17:11 UTC by Alexandre Franke
Modified: 2015-08-31 08:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gtkplacesview: don't translate signals and properties (2.85 KB, patch)
2015-08-31 08:17 UTC, Carlos Soriano
committed Details | Review

Description Alexandre Franke 2015-08-24 17:11:24 UTC
In src/gtk/gtkplacesview.c the strings "open-location" and "show-error-message" which are signal names are marked for translation. I don't think this will work if there actually is a translation, and I'm even surprised the compiler doesn't bug you for not having a const gchar *.
Comment 1 Alexandre Franke 2015-08-24 17:24:38 UTC
Maybe you meant to use I_() instead of _() ?
Comment 2 Piotr Drąg 2015-08-30 17:59:25 UTC
There are also properties in src/gtk/gtkplacesview.c and src/gtk/gtkplacesviewrow.c that shouldn't be translatable.
Comment 3 Carlos Soriano 2015-08-31 08:17:07 UTC
Created attachment 310330 [details] [review]
gtkplacesview: don't translate signals and properties

They are used internally anyway.
Comment 4 Carlos Soriano 2015-08-31 08:20:10 UTC
Is now ok? Since they are used only internally (since is copy pasted code from gtk+)
I marked them as non translatable for nautilus.

Attachment 310330 [details] pushed as 865e36e - gtkplacesview: don't translate signals and properties