gtkplacesview: don't translate signals and properties

They are used internally anyway.

https://bugzilla.gnome.org/show_bug.cgi?id=754035